# Zara

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PKGBUILD  README.md  SECURITY.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/release-notes/: v1.0.0.md  v1.0.0.title.txt  v1.0.1.md  v1.0.1.title.txt  v1.0.3.md  v1.0.3.title.txt
.github/workflows/: release-packages.yml
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
apps/desktop_qt/: CMakeLists.txt
apps/desktop_qt/include/rothalyx/desktop_qt/app/: ai_settings.hpp  analysis_runner.hpp  secret_store.hpp  workspace_controller.hpp
apps/desktop_qt/include/rothalyx/desktop_qt/persistence/: project_repository.hpp
apps/desktop_qt/include/rothalyx/desktop_qt/ui/: graph_view.hpp  main_window.hpp
apps/desktop_qt/resources/: rothalyx-re-framework.desktop  rothalyx-re-framework.icns  rothalyx_desktop_qt.rc
apps/desktop_qt/src/: main.cpp
apps/desktop_qt/src/app/: ai_settings.cpp  analysis_runner.cpp  secret_store.cpp  workspace_controller.cpp
apps/desktop_qt/src/persistence/: project_repository.cpp
apps/desktop_qt/src/ui/: graph_view.cpp  main_window.cpp
cmake/: RothalyxPackaging.cmake
core/: CMakeLists.txt
core/ai/include/rothalyx/ai/: assistant.hpp
core/ai/src/: assistant.cpp
core/analysis/include/rothalyx/analysis/: program_analysis.hpp
core/analysis/src/: program_analysis.cpp
core/cfg/include/rothalyx/cfg/: function_graph.hpp
core/cfg/src/: function_graph.cpp
core/database/include/rothalyx/database/: project_store.hpp
core/database/src/: project_store.cpp
core/debugger/include/rothalyx/debugger/: session.hpp
core/debugger/src/: integration.cpp  native_session.cpp  native_session_macos.cpp  native_session_windows.cpp
core/decompiler/include/rothalyx/decompiler/: decompiler.hpp
core/decompiler/src/: decompiler.cpp
core/diff/include/rothalyx/diff/: engine.hpp
core/diff/src/: engine.cpp
core/disasm/include/rothalyx/disasm/: disassembler.hpp
core/disasm/src/: disassembler.cpp
core/distributed/include/rothalyx/distributed/: batch_runner.hpp
core/distributed/include/zara/distributed/: batch_runner.hpp
core/distributed/src/: batch_runner.cpp
core/ir/include/rothalyx/ir/: lifter.hpp
core/ir/src/: lifter.cpp
core/loader/include/rothalyx/loader/: binary_image.hpp
core/loader/src/: binary_image.cpp
core/memory/include/rothalyx/memory/: address_space.hpp
core/memory/src/: address_space.cpp
core/plugins/include/rothalyx/plugins/: manager.hpp
core/plugins/runtime/: plugin_host.py
core/plugins/src/: manager.cpp
core/scripting/include/rothalyx/scripting/: python_engine.hpp
core/scripting/src/: python_engine.cpp
core/sdk/include/rothalyx/sdk/: api.h
core/sdk/src/: api.cpp
core/security/include/rothalyx/security/: workflow.hpp
core/security/src/: workflow.cpp
core/ssa/include/rothalyx/ssa/: builder.hpp
core/ssa/src/: builder.cpp
core/type/include/rothalyx/type/: recovery.hpp
core/type/src/: recovery.cpp
core/xrefs/include/rothalyx/xrefs/: analysis.hpp
core/xrefs/src/: analysis.cpp
docs/: ai_integration.md  architecture.md  fuzzing.md  sdk_api.md
fuzz/: CMakeLists.txt  loader_corpus_runner.cpp  prepare_corpus.sh  run_sustained_campaign.sh  trace_corpus_runner.cpp
plugins/marketplace/: README.md
scripts/release/: build-archlinux.sh  build-linux.sh  build-macos.sh  build-windows.ps1  generate_icons.py  render_release_notes.py
tests/: CMakeLists.txt  ai_model_smoke.cpp  ai_smoke.cpp  analysis_engine_smoke.cpp  analysis_smoke.cpp  architecture_smoke.cpp  arm_pe_loader_smoke.cpp  cfg_advanced_smoke.cpp  composite_type_smoke.cpp  core_smoke.cpp  database_persistence_smoke.cpp  debugger_attach_smoke.cpp  debugger_integration_smoke.cpp  debugger_launch_smoke.cpp  debugger_live_patch_smoke.cpp  debugger_target_shape_smoke.cpp  debugger_threads_smoke.cpp  decompiler_maturity_smoke.cpp  decompiler_smoke.cpp  decompiler_structured_smoke.cpp  diff_smoke.cpp  distributed_auth_smoke.cpp  distributed_protocol_abuse_smoke.cpp  distributed_remote_smoke.cpp  distributed_scripting_smoke.cpp  distributed_smoke.cpp  distributed_tls_smoke.cpp  function_discovery_smoke.cpp  fuzz_live_smoke.cpp  import_smoke.cpp  interprocedural_semantics_smoke.cpp  ir_smoke.cpp  lazy_cache_smoke.cpp  loader_adversarial_smoke.cpp  macho_chained_fixups_matrix_smoke.cpp  macho_chained_fixups_smoke.cpp  macho_loader_smoke.cpp  memory_smoke.cpp  mips_ppc_loader_smoke.cpp  native_analysis_smoke.cpp  (+20 more)
tests/fixtures/: debug_shell_commands.txt
tests/plugin_fixtures/echo_plugin/: plugin.json  plugin.py
tests/plugin_marketplace_fixtures/market_echo/: plugin.json  plugin.py
