add_executable(
    rothalyx_loader_corpus_runner
    loader_corpus_runner.cpp
)
target_link_libraries(
    rothalyx_loader_corpus_runner
    PRIVATE
        rothalyx_loader
        rothalyx_memory
)
rothalyx_apply_defaults(rothalyx_loader_corpus_runner)

add_executable(
    rothalyx_trace_corpus_runner
    trace_corpus_runner.cpp
)
target_link_libraries(
    rothalyx_trace_corpus_runner
    PRIVATE
        rothalyx_security
)
rothalyx_apply_defaults(rothalyx_trace_corpus_runner)
